--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,14 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <section id="hourBlock">
+        <div class="row">
+
+        </div>
+      </section>
+      <!-- Timeblock ends -->
+      
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
