--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -31,13 +32,20 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <section id="hourBlock">
-        <div class="row">
-
+      <div class="row">
+      <section class="time-block">
+         
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="What are you doing today?" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-secondary saveBtn" type="button" id="button-addon2">Save</button>
+          </div>
         </div>
+
       </section>
+      </div>
       <!-- Timeblock ends -->
-      
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
