alligned hour and time-block

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,8 +34,8 @@
 
       <div class="row">
       <section class="time-block">
-         
-        <div class="input-group mb-3">
+         <div class="col-sm-3 hour"><h2>9am</h2></div>
+        <div class=" col-sm-9 input-group mb-3">
           <input type="text" class="form-control" placeholder="What are you doing today?" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-secondary saveBtn" type="button" id="button-addon2">Save</button>
