removed section div, made rows w/o  bootstrap

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,17 +32,17 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div class="row">
-      <section class="time-block">
+      <div class="row time-block">
+        <!-- column for time of day  -->
          <div class="col-sm-3 hour"><h2>9am</h2></div>
-        <div class=" col-sm-9 input-group mb-3">
-          <input type="text" class="form-control" placeholder="What are you doing today?" aria-label="Recipient's username" aria-describedby="button-addon2">
-          <div class="input-group-append">
-            <button class="btn btn-secondary saveBtn" type="button" id="button-addon2">Save</button>
-          </div>
+         <!-- column for text area -->
+         <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+         <!-- column for save button -->
+          <div class="col-sm-2 saveBtn"><button class="btn btn-secondary saveBtn" type="button" id="button-addon2">Save</button></div>
         </div>
 
-      </section>
+     
+ 
       </div>
       <!-- Timeblock ends -->
 
