adjusted css for time-block and button

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -38,7 +38,7 @@
          <!-- column for text area -->
          <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
          <!-- column for save button -->
-          <div class="col-sm-2 saveBtn"><button class="btn btn-secondary saveBtn" type="button" id="button-addon2">Save</button></div>
+          <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
         </div>
 
      
