local storage get works, val() not text(). created all hour rows

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,10 +31,9 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-
       <div class="row time-block">
         <!-- column for time of day  -->
-         <div class="col-sm-3 hour"><h2>9am</h2></div>
+         <div class="col-sm-3 hour 9"><h2>9am</h2></div>
          <!-- column for text area -->
          <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
          <!-- column for save button -->
@@ -42,6 +41,93 @@
         </div>
        <!-- Timeblock ends -->
      
+        <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>10am</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>11am</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>12pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>1pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>2pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>3pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>4pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block">
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour 9"><h2>5pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
  
       </div>
 
