text saves to respective hour slot

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,9 +36,9 @@
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <!-- column for time of day  -->
-         <div class="col-sm-3 hour 9"><h2>9am</h2></div>
+         <div class="col-sm-3 hour"><h2>9am</h2></div>
          <!-- column for text area -->
-         <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+         <div  class="col-sm-7 data-9"><form><input type="text" id="9"></form></div>
          <!-- column for save button -->
           <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
         </div>
@@ -47,9 +47,9 @@
         <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>10am</h2></div>
+           <div class="col-sm-3 hour"><h2>10am</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-10"><form><input type="text" id="10"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -58,9 +58,9 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>11am</h2></div>
+           <div class="col-sm-3 hour"><h2>11am</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-11"><form><input type="text" id="11"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -69,9 +69,9 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>12pm</h2></div>
+           <div class="col-sm-3 hour"><h2>12pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-12"><form><input type="text" id="12"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -80,9 +80,9 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>1pm</h2></div>
+           <div class="col-sm-3 hour"><h2>1pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-1"><form><input type="text" id="1"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -91,9 +91,9 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>2pm</h2></div>
+           <div class="col-sm-3 hour"><h2>2pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-2"><form><input type="text" id="2"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -102,9 +102,20 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>3pm</h2></div>
+           <div class="col-sm-3 hour"><h2>3pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-3"><form><input type="text" id="3"></form></div>
+           <!-- column for save button -->
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          </div>
+         <!-- Timeblock ends -->
+
+          <!-- Timeblocks go here -->
+      <div class="row time-block" >
+          <!-- column for time of day  -->
+           <div class="col-sm-3 hour"><h2>4pm</h2></div>
+           <!-- column for text area -->
+           <div  class="col-sm-7 data-4"><form><input type="text" id="4"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
@@ -113,20 +124,9 @@
           <!-- Timeblocks go here -->
       <div class="row time-block">
           <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>4pm</h2></div>
+           <div class="col-sm-3 hour"><h2>5pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
-           <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
-          </div>
-         <!-- Timeblock ends -->
-
-          <!-- Timeblocks go here -->
-      <div class="row time-block">
-          <!-- column for time of day  -->
-           <div class="col-sm-3 hour 9"><h2>5pm</h2></div>
-           <!-- column for text area -->
-           <div  class="col-sm-7"><form><input type="text" id="textarea"></form></div>
+           <div  class="col-sm-7 data-5"><form><input type="text" id="5"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
           </div>
