--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,101 +34,101 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block0 time-block">
         <!-- column for time of day  -->
          <div class="col-sm-3 hour"><h2>9am</h2></div>
          <!-- column for text area -->
-         <div  class="col-sm-7 data-9"><form><input type="text" id="9"></form></div>
+         <div  class="col-sm-7 data"><form><input type="text" id="9"></form></div>
          <!-- column for save button -->
-          <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+          <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "9" type="button">Save</button></div>
         </div>
        <!-- Timeblock ends -->
      
         <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block1 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>10am</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-10"><form><input type="text" id="10"></form></div>
+           <div  class="col-sm-7 data"><form><input  type="text" id="10"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "10"type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block2 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>11am</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-11"><form><input type="text" id="11"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="11"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "11"type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block3 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>12pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-12"><form><input type="text" id="12"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="12"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "12" type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block4 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>1pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-1"><form><input type="text" id="1"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="1"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "13" type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block5 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>2pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-2"><form><input type="text" id="2"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="2"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "14"type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block6 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>3pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-3"><form><input type="text" id="3"></form></div>
+           <div  class="col-sm-7 data"><form><input  type="text" id="3"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "15"type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block" >
+      <div class="row time-block7 time-block" >
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>4pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-4"><form><input type="text" id="4"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="4"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "16"type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
 
           <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block8 time-block">
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>5pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 data-5"><form><input type="text" id="5"></form></div>
+           <div  class="col-sm-7 dataS"><form><input type="text" id="5"></form></div>
            <!-- column for save button -->
-            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" type="button">Save</button></div>
+            <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "17" type="button">Save</button></div>
           </div>
          <!-- Timeblock ends -->
  
