You are able to see index file now

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!-- column for time of day  -->
            <div class="col-sm-3 hour"><h2>5pm</h2></div>
            <!-- column for text area -->
-           <div  class="col-sm-7 dataS"><form><input type="text" id="5"></form></div>
+           <div  class="col-sm-7 data"><form><input type="text" id="5"></form></div>
            <!-- column for save button -->
             <div class="col-sm-2"><button class="btn btn-secondary saveBtn" value= "17" type="button">Save</button></div>
           </div>
